# hangman-custom-music

./: .gitignore  Cargo.toml  README.md  resources.rc  resources.res
.github/workflows/: rust.yml
src/: consts.rs  hangman.rs  logic.rs  main.rs  player.rs  tools.rs
