[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

[dependencies]
# ctrlc = "3.4.4"
# tokio  = { version = "1.39.2", features = ["full"] }
termcolor = "1.4.1"
rand = "0.8.5"
lazy_static = "1.5"
rpassword = "7.3.1"
log = "0.4.22"
structured-logger = "1.0.3"
crossterm = "0.28.1"
once_cell = "1.19.0"