[package]
name = "hangman"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
termcolor = "1.4.1"
rand = "0.8.5"
rpassword = "7.3.1"
once_cell = "1.19.0"
tempfile = "3.12.0"
super-rodio = "0.0.7"
flate2 = "1.0.31"
tar = "0.4.41"

[profile.release]
opt-level = "z"
lto = true
# panic = "abort"